# lora-messenger

./: .gitignore  LICENSE  README.md  SESSION.md  chat.py  pinephone.md  protocol.py  pyproject.toml  run
firmware/: Makefile  config.mk
firmware/sketches/LoRaMessenger/: LoRaMessenger.ino
firmware/sketches/examples/LoRaP2P_PingPong/: LoRaP2P_PingPong.ino
firmware/sketches/examples/LoRaP2P_RX/: LoRaP2P_RX.ino
firmware/sketches/examples/LoRaP2P_TX/: LoRaP2P_TX.ino
lora/: __init__.py  common.py  demod.py  mod.py
modem/: __init__.py  base.py  loopback.py  pinephone.py  rak.py  rak_usb.py  sdr.py
tests/: test_cfo_robustness.py  test_crypto.py  test_demod.py  test_loopback.py  test_lora_roundtrip.py  test_modem_framing.py  test_modem_roundtrip.py  test_modem_sdr.py  test_protocol.py  test_sdr_parsing.py
tools/: capture.py  listen.py  test_phy.py  test_pinephone.py  test_pinephone_ack.py  test_pinephone_chat.py  test_pinephone_modem.py  test_pinephone_pingpong.py  test_pinephone_rx.py  test_pinephone_stress.py  test_pinephone_sync.py  test_pinephone_tx.py  test_pluto.py  transmit.py
