[project]
name = "lora-messenger"
version = "0.1.0"
description = "Encrypted chat and mesh relay over LoRa"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

dependencies = [
    "textual",
    "pyserial",
    "cryptography",
]

[project.optional-dependencies]
sdr = [
    "numpy",
    "scipy",
    "pyadi-iio",
]
pinephone = [
    "smbus2",
]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
